--- a/templates/README.mustache
+++ b/templates/README.mustache
@@ -1,5 +1,7 @@
 # rosetta-sdk-go
 
+[![Coinbase](https://circleci.com/gh/coinbase/rosetta-sdk-go/tree/master.svg?style=svg)](https://circleci.com/gh/coinbase/rosetta-sdk-go/tree/master)
+
 ## What is Rosetta?
 Rosetta is a new project from Coinbase to standardize the process
 of deploying and interacting with blockchains. With an explicit
