--- a/templates/model.mustache
+++ b/templates/model.mustache
@@ -27,7 +27,7 @@ const (
 )
 {{/isEnum}}
 {{^isEnum}}
-// {{classname}}:{{#description}} {{{description}}}{{/description}}{{^description}} struct for {{{classname}}}{{/description}}
+// {{classname}}{{#description}} {{{description}}}{{/description}}{{^description}} struct for {{{classname}}}{{/description}}
 type {{classname}} struct {
 {{#allVars}}
 {{^-first}}
