--- a/templates/server/api.mustache
+++ b/templates/server/api.mustache
@@ -2,8 +2,9 @@
 package {{packageName}}
 
 import (
-	"net/http"{{#apiInfo}}{{#apis}}{{#imports}}
-	"{{import}}"{{/imports}}{{/apis}}{{/apiInfo}}
+	"net/http"
+
+  "github.com/coinbase/rosetta-sdk-go/models"
 )
 
 {{#apiInfo}}{{#apis}}
@@ -20,5 +21,5 @@ type {{classname}}Router interface { {{#operations}}{{#operation}}
 // while the service implementation can ignored with the .openapi-generator-ignore file 
 // and updated with the logic required for the API.
 type {{classname}}Servicer interface { {{#operations}}{{#operation}}
-	{{operationId}}({{#allParams}}{{dataType}}{{#hasMore}}, {{/hasMore}}{{/allParams}}) (*{{returnType}}, error){{/operation}}{{/operations}}
+	{{operationId}}({{#allParams}}models.{{dataType}}{{#hasMore}}, {{/hasMore}}{{/allParams}}) (*models.{{returnType}}, *models.Error){{/operation}}{{/operations}}
 }{{/apis}}{{/apiInfo}}
