--- a/templates/server/controller-api.mustache
+++ b/templates/server/controller-api.mustache
@@ -8,6 +8,7 @@ import (
 	"strings"
 
   "github.com/coinbase/rosetta-sdk-go/models"
+  "github.com/coinbase/rosetta-sdk-go/asserter"
 )
 
 // A {{classname}}Controller binds http requests to an api service and writes the service results to the http response
@@ -36,17 +37,29 @@ func (c *{{classname}}Controller) Routes() Routes {
 func (c *{{classname}}Controller) {{nickname}}(w http.ResponseWriter, r *http.Request) { {{#allParams}}{{#isHeaderParam}}
 	{{paramName}} := r.Header.Get("{{paramName}}"){{/isHeaderParam}}{{#isBodyParam}}
 	{{paramName}} := &models.{{dataType}}{}
-  // TODO: Assert required params are present
 	if err := json.NewDecoder(r.Body).Decode(&{{paramName}}); err != nil {
     err = EncodeJSONResponse(&models.Error{
       Message: err.Error(),
-    }, http.StatusBadRequest, w)
+    }, http.StatusInternalServerError, w)
     if err != nil {
       log.Fatal(err)
     }
 
     return
 	}
+
+  // Assert that {{dataType}} is correct
+  if err := asserter.{{dataType}}({{paramName}}); err != nil {
+    err = EncodeJSONResponse(&models.Error{
+      Message: err.Error(),
+    }, http.StatusInternalServerError, w)
+    if err != nil {
+      log.Fatal(err)
+    }
+
+    return
+  }
+
 	{{/isBodyParam}}{{/allParams}}
 	result, serviceErr := c.service.{{nickname}}({{#allParams}}{{#isBodyParam}}*{{/isBodyParam}}{{paramName}}{{#hasMore}}, {{/hasMore}}{{/allParams}})
 	if serviceErr != nil {
