--- a/templates/server/api.mustache
+++ b/templates/server/api.mustache
@@ -21,5 +21,5 @@ type {{classname}}Router interface { {{#operations}}{{#operation}}
 // while the service implementation can ignored with the .openapi-generator-ignore file 
 // and updated with the logic required for the API.
 type {{classname}}Servicer interface { {{#operations}}{{#operation}}
-	{{operationId}}({{#allParams}}models.{{dataType}}{{#hasMore}}, {{/hasMore}}{{/allParams}}) (*models.{{returnType}}, *models.Error){{/operation}}{{/operations}}
+	{{operationId}}({{#allParams}}*models.{{dataType}}{{#hasMore}}, {{/hasMore}}{{/allParams}}) (*models.{{returnType}}, *models.Error){{/operation}}{{/operations}}
 }{{/apis}}{{/apiInfo}}
