--- a/templates/client/api.mustache
+++ b/templates/client/api.mustache
@@ -21,7 +21,7 @@ type {{classname}}Service service
 {{#operation}}
 
 // {{operationId}}{{#notes}} {{notes}}{{/notes}}
-func (a *{{{classname}}}Service) {{{nickname}}}(ctx _context.Context{{#hasParams}}, {{/hasParams}}{{#allParams}}{{#required}}{{paramName}} models.{{{dataType}}}{{#hasMore}}, {{/hasMore}}{{/required}}{{/allParams}}{{#hasOptionalParams}}localVarOptionals *{{#structPrefix}}{{&classname}}{{/structPrefix}}{{{nickname}}}Opts{{/hasOptionalParams}}) ({{#returnType}}*models.{{{returnType}}}, {{/returnType}} *models.Error, error) {
+func (a *{{{classname}}}Service) {{{nickname}}}(ctx _context.Context{{#hasParams}}, {{/hasParams}}{{#allParams}}{{#required}}{{paramName}} *models.{{{dataType}}}{{#hasMore}}, {{/hasMore}}{{/required}}{{/allParams}}{{#hasOptionalParams}}localVarOptionals *{{#structPrefix}}{{&classname}}{{/structPrefix}}{{{nickname}}}Opts{{/hasOptionalParams}}) ({{#returnType}}*models.{{{returnType}}}, {{/returnType}} *models.Error, error) {
 	var (
 		localVarPostBody     interface{}
 	)
@@ -66,7 +66,7 @@ func (a *{{{classname}}}Service) {{{nickname}}}(ctx _context.Context{{#hasParams
 {{#hasBodyParam}}
 {{#bodyParams}}
   // body params
-	localVarPostBody = &{{paramName}}
+	localVarPostBody = {{paramName}}
 {{/bodyParams}}
 {{/hasBodyParam}}
 
