--- a/templates/client/model.mustache
+++ b/templates/client/model.mustache
@@ -26,7 +26,7 @@ type {{classname}} struct {
 {{#description}}
 	// {{{description}}}
 {{/description}}
-	{{name}} {{^isPrimitiveType}}{{#required}}*{{/required}}{{/isPrimitiveType}}{{^required}}*{{/required}}{{{dataType}}} `json:"{{baseName}}{{^required}},omitempty{{/required}}"`
+	{{name}} {{^isPrimitiveType}}{{#required}}*{{/required}}{{/isPrimitiveType}}{{^required}}*{{/required}}{{{dataType}}} `json:"{{baseName}}{{^required}},omitempty{{/required}}" yaml:"{{baseName}}{{^required}},omitempty{{/required}}"`
 {{/allVars}}
 }
 {{/isEnum}}
