return ErrRetriable if error was retriable

--- a/templates/client/client.mustache
+++ b/templates/client/client.mustache
@@ -14,10 +14,16 @@ import (
 	"reflect"
 	"regexp"
 	"strings"
+  "errors"
 )
 
 var (
 	jsonCheck = regexp.MustCompile(`(?i:(?:application|text)/(?:vnd\.[^;]+\+)?json)`)
+
+  // ErrRetriable is returned when a 502, 503, or 504 HTTP code is encountered.
+  // These status codes may be returned by intermediate services when a Rosetta
+  // implementation is overloaded and should not be considered failures.
+  ErrRetriable = errors.New("retriable http status code received")
 )
 
 // APIClient manages communication with the {{appName}} API v{{version}}
