--- a/templates/client/api.mustache
+++ b/templates/client/api.mustache
@@ -88,14 +88,17 @@ func (a *{{{classname}}}Service) {{{nickname}}}(ctx _context.Context{{#hasParams
     return nil, nil, err 
 	}
 
-	if localVarHTTPResponse.StatusCode != _nethttp.StatusOK {
-    var v types.Error
-    err = a.client.decode(&v, localVarBody, localVarHTTPResponse.Header.Get("Content-Type"))
-    if err != nil {
-      return nil, nil, err 
-    }
+	switch localVarHTTPResponse.StatusCode {
+	case _nethttp.StatusInternalServerError:
+		var v types.Error
+		err = a.client.decode(&v, localVarBody, localVarHTTPResponse.Header.Get("Content-Type"))
+		if err != nil {
+			return nil, nil, err
+		}
 
-		return nil, &v, fmt.Errorf("%+v", v) 
+		return nil, &v, fmt.Errorf("%+v", v)
+	case _nethttp.StatusBadGateway, _nethttp.StatusServiceUnavailable, _nethttp.StatusGatewayTimeout:
+		return nil, nil, fmt.Errorf("%w: code: %d body: %s", ErrRetriable, localVarHTTPResponse.StatusCode, string(localVarBody))
 	}
 
 	{{#returnType}}
