--- a/templates/client/configuration.mustache
+++ b/templates/client/configuration.mustache
@@ -139,8 +139,8 @@ func (c *Configuration) AddDefaultHeader(key string, value string) {
 
 // ServerUrl returns URL based on server settings
 func (c *Configuration) ServerUrl(index int, variables map[string]string) (string, error) {
-	if index < 0 || len(c.Servers) <= index {
-		return "", fmt.Errorf("Index %v out of range %v", index, len(c.Servers) - 1)
+	if index < 0 || index >= len(c.Servers) {
+		return "", fmt.Errorf("index %d out of range [0-%d]", index, len(c.Servers)-1)
 	}
 	server := c.Servers[index]
 	url := server.Url
@@ -155,7 +155,7 @@ func (c *Configuration) ServerUrl(index int, variables map[string]string) (strin
 				}
 			}
 			if !found {
-				return "", fmt.Errorf("The variable %s in the server URL has invalid value %v. Must be %v", name, value, variable.EnumValues)
+				return "", fmt.Errorf("the variable %s in the server URL has invalid value %s. Must be %v", name, value, variable.EnumValues)
 			}
 			url = strings.ReplaceAll(url, "{"+name+"}", value)
 		} else {
