--- a/templates/server/routers.mustache
+++ b/templates/server/routers.mustache
@@ -2,6 +2,7 @@
 package {{packageName}}
 
 import (
+	"context"
 	"encoding/json"
 	"net/http"
 
@@ -22,6 +23,7 @@ type Routes []Route
 // Router defines the required methods for retrieving api routes
 type Router interface {
 	Routes() Routes
+	ContextFromRequest(*http.Request) context.Context
 }
 
 // CorsMiddleware handles CORS and ensures OPTIONS requests are
