revert request context changes to controller

--- a/templates/server/controller-api.mustache
+++ b/templates/server/controller-api.mustache
@@ -13,21 +13,18 @@ import (
 
 // A {{classname}}Controller binds http requests to an api service and writes the service results to the http response
 type {{classname}}Controller struct {
-	service            {{classname}}Servicer
-  asserter           *asserter.Asserter
-	contextFromRequest func(*http.Request) context.Context
+	service  {{classname}}Servicer
+	asserter *asserter.Asserter
 }
 
 // New{{classname}}Controller creates a default api controller
 func New{{classname}}Controller(
   s {{classname}}Servicer,
   asserter *asserter.Asserter,
-	contextFromRequest func(*http.Request) context.Context,
 ) Router {
 	return &{{classname}}Controller{
     service: s,
     asserter: asserter,
-		contextFromRequest: contextFromRequest,
   }
 }
 
@@ -42,16 +39,6 @@ func (c *{{classname}}Controller) Routes() Routes {
 		},{{/operation}}{{/operations}}
 	}
 }
-
-func (c *{{classname}}Controller) ContextFromRequest(r *http.Request) context.Context {
-	ctx := r.Context()
-
-	if c.contextFromRequest != nil {
-		ctx = c.contextFromRequest(r)
-	}
-
-	return ctx
-}{{#operations}}{{#operation}}
 
 // {{nickname}} - {{{summary}}}
 func (c *{{classname}}Controller) {{nickname}}(w http.ResponseWriter, r *http.Request) { {{#allParams}}{{#isHeaderParam}}
@@ -75,7 +62,7 @@ func (c *{{classname}}Controller) {{nickname}}(w http.ResponseWriter, r *http.Re
   }
 
 	{{/isBodyParam}}{{/allParams}}
-	result, serviceErr := c.service.{{nickname}}(c.ContextFromRequest(r), {{#allParams}}{{paramName}}{{#hasMore}}, {{/hasMore}}{{/allParams}})
+	result, serviceErr := c.service.{{nickname}}(r.Context(), {{#allParams}}{{paramName}}{{#hasMore}}, {{/hasMore}}{{/allParams}})
 	if serviceErr != nil {
     EncodeJSONResponse(serviceErr, http.StatusInternalServerError, w)
 
