feat: grpc header forwarding (#508)
* add header forwarding for grpc

* proper header handling for grpc metadata

* Add outgoing header forwarding

* revert request context changes to controller

* update go to 1.19

* fix server templates

* remove ioutil

* make gen

* remove extra context import

* fix routers.go

--- a/templates/server/controller-api.mustache
+++ b/templates/server/controller-api.mustache
@@ -2,7 +2,6 @@
 package {{packageName}}
 
 import (
-	"context"
 	"encoding/json"
 	"net/http"
 	"strings"
@@ -13,21 +12,18 @@ import (
 
 // A {{classname}}Controller binds http requests to an api service and writes the service results to the http response
 type {{classname}}Controller struct {
-	service            {{classname}}Servicer
-  asserter           *asserter.Asserter
-	contextFromRequest func(*http.Request) context.Context
+	service  {{classname}}Servicer
+	asserter *asserter.Asserter
 }
 
 // New{{classname}}Controller creates a default api controller
 func New{{classname}}Controller(
   s {{classname}}Servicer,
   asserter *asserter.Asserter,
-	contextFromRequest func(*http.Request) context.Context,
 ) Router {
 	return &{{classname}}Controller{
     service: s,
     asserter: asserter,
-		contextFromRequest: contextFromRequest,
   }
 }
 
@@ -41,16 +37,6 @@ func (c *{{classname}}Controller) Routes() Routes {
 			c.{{operationId}},
 		},{{/operation}}{{/operations}}
 	}
-}
-
-func (c *{{classname}}Controller) ContextFromRequest(r *http.Request) context.Context {
-	ctx := r.Context()
-
-	if c.contextFromRequest != nil {
-		ctx = c.contextFromRequest(r)
-	}
-
-	return ctx
 }{{#operations}}{{#operation}}
 
 // {{nickname}} - {{{summary}}}
@@ -75,7 +61,7 @@ func (c *{{classname}}Controller) {{nickname}}(w http.ResponseWriter, r *http.Re
   }
 
 	{{/isBodyParam}}{{/allParams}}
-	result, serviceErr := c.service.{{nickname}}(c.ContextFromRequest(r), {{#allParams}}{{paramName}}{{#hasMore}}, {{/hasMore}}{{/allParams}})
+	result, serviceErr := c.service.{{nickname}}(r.Context(), {{#allParams}}{{paramName}}{{#hasMore}}, {{/hasMore}}{{/allParams}})
 	if serviceErr != nil {
     EncodeJSONResponse(serviceErr, http.StatusInternalServerError, w)
 
